include/aa.h

/* ---- Status codes ---- */

typedef enum {
    AA_OK = 0,
    AA_NULL_OUT_PTR = 1,
    AA_INVALID_URL = 2,
    AA_OUT_OF_MEMORY = 3,
    AA_INVALID_PRIVATE_KEY = 4,
    AA_INVALID_KERNEL_VERSION = 5,
    AA_NULL_CONTEXT = 6,
    AA_NULL_ACCOUNT = 7,
    AA_NULL_USEROP = 8,
    AA_GET_ADDRESS_FAILED = 9,
    AA_BUILD_USEROP_FAILED = 10,
    AA_HASH_USEROP_FAILED = 11,
    AA_SIGN_USEROP_FAILED = 12,
    AA_SEND_USEROP_FAILED = 13,
    AA_ESTIMATE_GAS_FAILED = 14,
    AA_PAYMASTER_FAILED = 15,
    AA_NO_CALLS = 16,
    AA_INVALID_HEX = 17,
    AA_APPLY_JSON_FAILED = 18,
    AA_SERIALIZE_FAILED = 19,
    AA_NO_GAS_MIDDLEWARE = 20,
    AA_NO_PAYMASTER_MIDDLEWARE = 21,
    AA_RECEIPT_TIMEOUT = 22,
    AA_RECEIPT_FAILED = 23,
    AA_INVALID_SIGNER = 24,
    AA_SIGN_MESSAGE_FAILED = 25,
} aa_status;
/* ---- Opaque handles ---- */

typedef struct aa_context aa_context_t;
typedef struct aa_signer aa_signer_t;
typedef struct aa_account aa_account_t;
typedef struct aa_userop aa_userop_t;
/* ---- Call struct ---- */

typedef struct aa_call {
    const uint8_t target[20];
    const uint8_t value_be[32];    /* u256, big-endian */
    const uint8_t *calldata;
    size_t calldata_len;
} aa_call_t;
/* ---- Paymaster middleware ---- */

typedef enum {
    AA_PM_STUB = 0,     /* Before gas estimation */
    AA_PM_FINAL = 1,    /* After gas estimation */
} aa_pm_phase;
typedef struct {
    uint8_t paymaster[20];
    uint64_t paymaster_verification_gas_limit;
    uint64_t paymaster_post_op_gas_limit;
    uint8_t *paymaster_data;
    size_t paymaster_data_len;
} aa_paymaster_result_t;
/** ZeroDev paymaster middleware. Calls pm_getPaymasterStubData / pm_getPaymasterData. */
aa_status aa_paymaster_zerodev(aa_context_t *ctx,
                                const char *userop_json,
                                size_t userop_json_len,
                                const char *entry_point,
                                uint64_t chain_id,
                                aa_pm_phase phase,
                                aa_paymaster_result_t *out);
/* ---- Signer (create before account) ---- */

/** Create a local signer from a 32-byte private key. */
aa_status aa_signer_local(const uint8_t private_key[32],
                           aa_signer_t **out);
/** Create a local signer with a randomly generated private key. */
aa_status aa_signer_generate(aa_signer_t **out);
/** Create a JSON-RPC signer (Privy, custodial wallets, etc.). */
aa_status aa_signer_rpc(const char *rpc_url,
                         const uint8_t address[20],
                         aa_signer_t **out);
/* ---- EIP-7702 authorization ---- */

typedef struct {
    uint64_t chain_id;
    uint8_t address[20];
    uint64_t nonce;
    uint8_t y_parity;
    uint8_t r[32];
    uint8_t s[32];
} aa_authorization_t;
/** Create a custom signer from a vtable of function pointers.
 *
 * sign_authorization is OPTIONAL (may be NULL). When NULL, the SDK falls back
 * to computing keccak256(0x05 || rlp([chainId, address, nonce])) and calling
 * sign_hash.
 *
 * NOTE: This field was appended to the struct. Consumers MUST recompile against
 * this header before linking — the ABI is NOT compatible with code that was
 * built against the older 4-field vtable (the SDK reads past the old layout).
 * C99 zero-initialization (`aa_signer_vtable v = {.sign_hash = ...};`) covers
 * this field automatically at compile time, making the change source-compatible. */
typedef struct {
    int (*sign_hash)(void *ctx, const uint8_t hash[32], uint8_t sig_out[65]);
    int (*sign_message)(void *ctx, const uint8_t *msg, size_t msg_len, uint8_t sig_out[65]);
    int (*sign_typed_data_hash)(void *ctx, const uint8_t hash[32], uint8_t sig_out[65]);
    int (*get_address)(void *ctx, uint8_t addr_out[20]);
    int (*sign_authorization)(void *ctx, uint64_t chain_id, const uint8_t address[20],
                              uint64_t nonce, aa_authorization_t *out);
} aa_signer_vtable;
aa_status aa_signer_custom(const aa_signer_vtable *vtable,
                            void *ctx,
                            aa_signer_t **out);
/** Sign an EIP-7702 authorization tuple (chainId, delegation-target, EOA nonce).
 *
 * Works on any signer. Custom signers may implement this natively via their
 * vtable; otherwise the SDK computes keccak256(0x05 || rlp([chainId, address,
 * nonce])) and signs the hash with sign_hash. */
aa_status aa_signer_sign_authorization(aa_signer_t *signer,
                                        uint64_t chain_id,
                                        const uint8_t address[20],
                                        uint64_t nonce,
                                        aa_authorization_t *out);
/** Destroy a signer handle. */
void aa_signer_destroy(aa_signer_t *signer);
/* ---- High-level: full pipeline ---- */

aa_status aa_send_userop(aa_account_t *account,
                         const aa_call_t *calls,
                         size_t calls_len,
                         uint8_t hash_out[32]);
/* ---- Low-level: step-by-step UserOp control ---- */

aa_status aa_userop_build(aa_account_t *account,
                          const aa_call_t *calls,
                          size_t calls_len,
                          aa_userop_t **out);
aa_status aa_userop_hash(aa_userop_t *op,
                         aa_account_t *account,
                         uint8_t hash_out[32]);
aa_status aa_userop_sign(aa_userop_t *op,
                         aa_account_t *account);
aa_status aa_userop_to_json(aa_userop_t *op,
                            char **json_out,
                            size_t *len_out);
aa_status aa_userop_apply_gas_json(aa_userop_t *op,
                                   const char *gas_json,
                                   size_t gas_json_len);
aa_status aa_userop_apply_paymaster_json(aa_userop_t *op,
                                         const char *pm_json,
                                         size_t pm_json_len);
aa_status aa_userop_destroy(aa_userop_t *op);
/* ---- Error details ---- */

const char *aa_get_last_error(void);