bindings/dart/lib/src/ffi/aa_bindings.g.dart


  /// ---- Error details ----
  ffi.Pointer<ffi.Char> aa_get_last_error() {
    return _aa_get_last_error();
  }

  late final _aa_get_last_errorPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'aa_get_last_error');
  late final _aa_get_last_error =
      _aa_get_last_errorPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  /// ZeroDev paymaster middleware. Calls pm_getPaymasterStubData / pm_getPaymasterData.
  aa_status aa_paymaster_zerodev(
    ffi.Pointer<aa_context_t> ctx,
    ffi.Pointer<ffi.Char> userop_json,
    int userop_json_len,
    ffi.Pointer<ffi.Char> entry_point,
    int chain_id,
    aa_pm_phase phase,
    ffi.Pointer<aa_paymaster_result_t> out,
  ) {
    return aa_status.fromValue(_aa_paymaster_zerodev(
      ctx,
      userop_json,
      userop_json_len,
      entry_point,
      chain_id,
      phase.value,
      out,
    ));
  }

  late final _aa_paymaster_zerodevPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<aa_context_t>,
              ffi.Pointer<ffi.Char>,
              ffi.Size,
              ffi.Pointer<ffi.Char>,
              ffi.Uint64,
              ffi.UnsignedInt,
              ffi.Pointer<aa_paymaster_result_t>)>>('aa_paymaster_zerodev');
  late final _aa_paymaster_zerodev = _aa_paymaster_zerodevPtr.asFunction<
      int Function(
          ffi.Pointer<aa_context_t>,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Char>,
          int,
          int,
          ffi.Pointer<aa_paymaster_result_t>)>();

  /// ---- High-level: full pipeline ----
  aa_status aa_send_userop(
    ffi.Pointer<aa_account_t> account,
    ffi.Pointer<aa_call_t> calls,
    int calls_len,
    ffi.Pointer<ffi.Uint8> hash_out,
  ) {
    return aa_status.fromValue(_aa_send_userop(
      account,
      calls,
      calls_len,
      hash_out,
    ));
  }

  late final _aa_send_useropPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<aa_account_t>,
              ffi.Pointer<aa_call_t>,
              ffi.Size,
              ffi.Pointer<ffi.Uint8>)>>('aa_send_userop');
  late final _aa_send_userop = _aa_send_useropPtr.asFunction<
      int Function(ffi.Pointer<aa_account_t>, ffi.Pointer<aa_call_t>, int,
          ffi.Pointer<ffi.Uint8>)>();

  aa_status aa_signer_custom(
    ffi.Pointer<aa_signer_vtable> vtable,
    ffi.Pointer<ffi.Void> ctx,
    ffi.Pointer<ffi.Pointer<aa_signer_t>> out,
  ) {
    return aa_status.fromValue(_aa_signer_custom(
      vtable,
      ctx,
      out,
    ));
  }

  late final _aa_signer_customPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<aa_signer_vtable>,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Pointer<aa_signer_t>>)>>('aa_signer_custom');
  late final _aa_signer_custom = _aa_signer_customPtr.asFunction<
      int Function(ffi.Pointer<aa_signer_vtable>, ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Pointer<aa_signer_t>>)>();

  /// Destroy a signer handle.
  void aa_signer_destroy(
    ffi.Pointer<aa_signer_t> signer,
  ) {
    return _aa_signer_destroy(
      signer,
    );
  }

  late final _aa_signer_destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<aa_signer_t>)>>(
          'aa_signer_destroy');
  late final _aa_signer_destroy = _aa_signer_destroyPtr
      .asFunction<void Function(ffi.Pointer<aa_signer_t>)>();

  /// Create a local signer with a randomly generated private key.
  aa_status aa_signer_generate(
    ffi.Pointer<ffi.Pointer<aa_signer_t>> out,
  ) {
    return aa_status.fromValue(_aa_signer_generate(
      out,
    ));
  }

  late final _aa_signer_generatePtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<ffi.Pointer<aa_signer_t>>)>>('aa_signer_generate');
  late final _aa_signer_generate = _aa_signer_generatePtr
      .asFunction<int Function(ffi.Pointer<ffi.Pointer<aa_signer_t>>)>();

  /// Create a local signer from a 32-byte private key.
  aa_status aa_signer_local(
    ffi.Pointer<ffi.Uint8> private_key,
    ffi.Pointer<ffi.Pointer<aa_signer_t>> out,
  ) {
    return aa_status.fromValue(_aa_signer_local(
      private_key,
      out,
    ));
  }

  late final _aa_signer_localPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<ffi.Uint8>,
              ffi.Pointer<ffi.Pointer<aa_signer_t>>)>>('aa_signer_local');
  late final _aa_signer_local = _aa_signer_localPtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Uint8>, ffi.Pointer<ffi.Pointer<aa_signer_t>>)>();

  /// Create a JSON-RPC signer (Privy, custodial wallets, etc.).
  aa_status aa_signer_rpc(
    ffi.Pointer<ffi.Char> rpc_url,
    ffi.Pointer<ffi.Uint8> address,
    ffi.Pointer<ffi.Pointer<aa_signer_t>> out,
  ) {
    return aa_status.fromValue(_aa_signer_rpc(
      rpc_url,
      address,
      out,
    ));
  }

  late final _aa_signer_rpcPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Uint8>,
              ffi.Pointer<ffi.Pointer<aa_signer_t>>)>>('aa_signer_rpc');
  late final _aa_signer_rpc = _aa_signer_rpcPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Uint8>,
          ffi.Pointer<ffi.Pointer<aa_signer_t>>)>();

  /// Sign an EIP-7702 authorization tuple (chainId, delegation-target, EOA nonce).
  ///
  /// Works on any signer. Custom signers may implement this natively via their
  /// vtable; otherwise the SDK computes keccak256(0x05 || rlp([chainId, address,
  /// nonce])) and signs the hash with sign_hash.
  aa_status aa_signer_sign_authorization(
    ffi.Pointer<aa_signer_t> signer,
    int chain_id,
    ffi.Pointer<ffi.Uint8> address,
    int nonce,
    ffi.Pointer<aa_authorization_t> out,
  ) {
    return aa_status.fromValue(_aa_signer_sign_authorization(
      signer,
      chain_id,
      address,
      nonce,
      out,
    ));
  }

  late final _aa_signer_sign_authorizationPtr = _lookup<
          ffi.NativeFunction<
              ffi.UnsignedInt Function(
                  ffi.Pointer<aa_signer_t>,
                  ffi.Uint64,
                  ffi.Pointer<ffi.Uint8>,
                  ffi.Uint64,
                  ffi.Pointer<aa_authorization_t>)>>(
      'aa_signer_sign_authorization');
  late final _aa_signer_sign_authorization =
      _aa_signer_sign_authorizationPtr.asFunction<
          int Function(ffi.Pointer<aa_signer_t>, int, ffi.Pointer<ffi.Uint8>,
              int, ffi.Pointer<aa_authorization_t>)>();

  aa_status aa_userop_apply_gas_json(
    ffi.Pointer<aa_userop_t> op,
    ffi.Pointer<ffi.Char> gas_json,
    int gas_json_len,
  ) {
    return aa_status.fromValue(_aa_userop_apply_gas_json(
      op,
      gas_json,
      gas_json_len,
    ));
  }

  late final _aa_userop_apply_gas_jsonPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<aa_userop_t>,
              ffi.Pointer<ffi.Char>, ffi.Size)>>('aa_userop_apply_gas_json');
  late final _aa_userop_apply_gas_json =
      _aa_userop_apply_gas_jsonPtr.asFunction<
          int Function(ffi.Pointer<aa_userop_t>, ffi.Pointer<ffi.Char>, int)>();

  aa_status aa_userop_apply_paymaster_json(
    ffi.Pointer<aa_userop_t> op,
    ffi.Pointer<ffi.Char> pm_json,
    int pm_json_len,
  ) {
    return aa_status.fromValue(_aa_userop_apply_paymaster_json(
      op,
      pm_json,
      pm_json_len,
    ));
  }

  late final _aa_userop_apply_paymaster_jsonPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<aa_userop_t>,
              ffi.Pointer<ffi.Char>,
              ffi.Size)>>('aa_userop_apply_paymaster_json');
  late final _aa_userop_apply_paymaster_json =
      _aa_userop_apply_paymaster_jsonPtr.asFunction<
          int Function(ffi.Pointer<aa_userop_t>, ffi.Pointer<ffi.Char>, int)>();

  /// ---- Low-level: step-by-step UserOp control ----
  aa_status aa_userop_build(
    ffi.Pointer<aa_account_t> account,
    ffi.Pointer<aa_call_t> calls,
    int calls_len,
    ffi.Pointer<ffi.Pointer<aa_userop_t>> out,
  ) {
    return aa_status.fromValue(_aa_userop_build(
      account,
      calls,
      calls_len,
      out,
    ));
  }

  late final _aa_userop_buildPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<aa_account_t>,
              ffi.Pointer<aa_call_t>,
              ffi.Size,
              ffi.Pointer<ffi.Pointer<aa_userop_t>>)>>('aa_userop_build');
  late final _aa_userop_build = _aa_userop_buildPtr.asFunction<
      int Function(ffi.Pointer<aa_account_t>, ffi.Pointer<aa_call_t>, int,
          ffi.Pointer<ffi.Pointer<aa_userop_t>>)>();

  aa_status aa_userop_destroy(
    ffi.Pointer<aa_userop_t> op,
  ) {
    return aa_status.fromValue(_aa_userop_destroy(
      op,
    ));
  }

  late final _aa_userop_destroyPtr = _lookup<
          ffi
          .NativeFunction<ffi.UnsignedInt Function(ffi.Pointer<aa_userop_t>)>>(
      'aa_userop_destroy');
  late final _aa_userop_destroy = _aa_userop_destroyPtr
      .asFunction<int Function(ffi.Pointer<aa_userop_t>)>();

  aa_status aa_userop_hash(
    ffi.Pointer<aa_userop_t> op,
    ffi.Pointer<aa_account_t> account,
    ffi.Pointer<ffi.Uint8> hash_out,
  ) {
    return aa_status.fromValue(_aa_userop_hash(
      op,
      account,
      hash_out,
    ));
  }

  late final _aa_userop_hashPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<aa_userop_t>,
              ffi.Pointer<aa_account_t>,
              ffi.Pointer<ffi.Uint8>)>>('aa_userop_hash');
  late final _aa_userop_hash = _aa_userop_hashPtr.asFunction<
      int Function(ffi.Pointer<aa_userop_t>, ffi.Pointer<aa_account_t>,
          ffi.Pointer<ffi.Uint8>)>();

  aa_status aa_userop_sign(
    ffi.Pointer<aa_userop_t> op,
    ffi.Pointer<aa_account_t> account,
  ) {
    return aa_status.fromValue(_aa_userop_sign(
      op,
      account,
    ));
  }

  late final _aa_userop_signPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<aa_userop_t>,
              ffi.Pointer<aa_account_t>)>>('aa_userop_sign');
  late final _aa_userop_sign = _aa_userop_signPtr.asFunction<
      int Function(ffi.Pointer<aa_userop_t>, ffi.Pointer<aa_account_t>)>();

  aa_status aa_userop_to_json(
    ffi.Pointer<aa_userop_t> op,
    ffi.Pointer<ffi.Pointer<ffi.Char>> json_out,
    ffi.Pointer<ffi.Size> len_out,
  ) {
    return aa_status.fromValue(_aa_userop_to_json(
      op,
      json_out,
      len_out,
    ));
  }

  late final _aa_userop_to_jsonPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<aa_userop_t>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Size>)>>('aa_userop_to_json');
  late final _aa_userop_to_json = _aa_userop_to_jsonPtr.asFunction<
      int Function(ffi.Pointer<aa_userop_t>, ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Size>)>();
